<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.myHeroes.MyHeroesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/LinearLayoutTitulos">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_my_heroes"
                style="@style/TextTitles"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSubtitulos">

            <TextView
                android:id="@+id/textView_herois_ja_hospedados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_herois_ja_hospedados"
                style="@style/TextSubtitles"/>

        </LinearLayout>

        <ListView
            android:id="@+id/listView_recents"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <LinearLayout
            style="@style/LinearLayoutSubtitulos">

            <TextView
                android:id="@+id/textView_heroi_favorito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_heroi_favorito"
                style="@style/TextSubtitles"/>

        </LinearLayout>

        <ListView
            android:id="@+id/listView_favorites"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>