<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="64dp">

                <ImageView
                    android:id="@+id/img_host"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="bottom|center_horizontal"
                    />

                <ImageView
                    android:id="@+id/img_superhero"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="bottom|right"
                    />

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/text_view_host_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextHost"/>

                <TextView
                    android:id="@+id/text_view_host_neighborhood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextNeighborhood"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/ratingBar_host"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/ratingBarStyleSmall"
                        android:numStars="5"
                        android:isIndicator="false"
                        android:rating="5.0"
                        android:theme="@style/RatingBar"/>

                    <TextView
                        android:id="@+id/text_view_qtd_bookings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextQtdBookings"
                        android:text="@string/mock_qtd_bookings"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="right"
                android:layout_gravity="right">

                <br.com.doghero.dhproject.activities.myHeroes.components.LikeComponent
                    android:id="@+id/likeComponent_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </br.com.doghero.dhproject.activities.myHeroes.components.LikeComponent>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextRS"
                        android:text="@string/text_rs"/>

                    <TextView
                        android:id="@+id/text_view_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextValue"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextNight"
                    android:text="@string/text_night"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/button_conversar"
                android:layout_width="match_parent"
                android:layout_weight="1"
                style="@style/btnConversar"
                android:text="@string/text_conversar" />

            <Button
                android:id="@+id/button_reservar_de_novo"
                android:layout_width="match_parent"
                android:layout_weight="1"
                style="@style/btnReservar"
                android:text="@string/text_reservar_de_novo" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>